# LabAiSD2

./: CMakeLists.txt  tests.cc
src/: linked_list.cc  main.cc
